# ChangeLog for xfce-base/xfce-utils
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-utils/ChangeLog,v 1.78 2006/12/17 14:18:42 welp Exp $

  17 Dec 2006; Peter Weller <welp@gentoo.org> files/Gentoo:
  s/pacakge/package in files/Gentoo

  10 Dec 2006; Joshua Nichols <nichoj@gentoo.org>
  xfce-utils-4.3.99.2.ebuild:
  Added missing dependency on xfce-mcs-manager, see bug #157551.

  07 Dec 2006; Joshua Nichols <nichoj@gentoo.org> -xfce-utils-4.2.1.ebuild,
  -xfce-utils-4.2.2.ebuild, -xfce-utils-4.2.2-r1.ebuild,
  -xfce-utils-4.3.90.1.ebuild, -xfce-utils-4.3.90.2.ebuild:
  Pruned old versions with new versions with same or better keywords.

*xfce-utils-4.3.99.2 (07 Dec 2006)

  07 Dec 2006; Joshua Nichols <nichoj@gentoo.org>
  +xfce-utils-4.3.99.2.ebuild:
  Version bump for RC2. See bug #146563.

  02 Dec 2006; Tiziano Müller <dev-zero@gentoo.org>
  xfce-utils-4.2.2-r1.ebuild, xfce-utils-4.2.3.ebuild:
  ~x86-fbsd keyword added

  13 Nov 2006; Bryan Østergaard <kloeri@gentoo.org>
  xfce-utils-4.2.3.ebuild:
  Stable on Alpha.

  20 Jul 2006; Daniel Ostrow <dostrow@gentoo.org>
  xfce-utils-4.3.90.2.ebuild:
  Add dep on xmessage, thanks go to drac for catching the dep.

  13 Jul 2006; Aron Griffis <agriffis@gentoo.org> xfce-utils-4.2.3.ebuild:
  Mark 4.2.3 stable on ia64

*xfce-utils-4.3.90.2 (10 Jul 2006)

  10 Jul 2006; Brad Cowan <bcowan@gentoo.org> +xfce-utils-4.3.90.2.ebuild:
  Xfce beta 2 builds

  09 Jul 2006; Joshua Kinard <kumba@gentoo.org> xfce-utils-4.2.3.ebuild:
  Marked stable on mips.

  05 Jun 2006; Stefan Schweizer <genstef@gentoo.org>
  +files/nolisten-tcp.patch, xfce-utils-4.2.3.ebuild,
  xfce-utils-4.3.90.1.ebuild:
  commit for drac: make X not listen on tcp for xfce, bug 61852 thanks to
  Geoff <thunderlove@charter.net>

  22 Apr 2006; Markus Rothe <corsair@gentoo.org> xfce-utils-4.2.3.ebuild:
  Stable on ppc64
