@@ -12,14 +12,14 @@ EBUILD xfce-utils-4.2.3.ebuild 740 RMD160 89f5c1ad5599352b213fef2bc1e1ebace4259f
 MD5 b2ff51954dccba26cf711ce62eb22dfb xfce-utils-4.2.3.ebuild 740
 RMD160 89f5c1ad5599352b213fef2bc1e1ebace4259f9e xfce-utils-4.2.3.ebuild 740
 SHA256 6c4e904b45f9c0c470b5ce4e2766ab134e07a014ac814cb3bc1b29c29586158e xfce-utils-4.2.3.ebuild 740
-EBUILD xfce-utils-4.3.99.2.ebuild 990 RMD160 397c75057536c063a305f0b7110b5be77af9e134 SHA1 d27417b606a16d814410bc1f4fe758538521ca6a SHA256 4884d1b6ffeb50c11575cf9ffb2aa0aab4958aac4995f456a20649ff10b75518
-MD5 93e0bc986e23be1045156b96812ecbab xfce-utils-4.3.99.2.ebuild 990
-RMD160 397c75057536c063a305f0b7110b5be77af9e134 xfce-utils-4.3.99.2.ebuild 990
-SHA256 4884d1b6ffeb50c11575cf9ffb2aa0aab4958aac4995f456a20649ff10b75518 xfce-utils-4.3.99.2.ebuild 990
-MISC ChangeLog 9671 RMD160 3c97f7a1706ebbdea0bb9387e666b0e6120c184d SHA1 4826cd708505313706a80e5015aee2c3af03bc04 SHA256 9fadf3765e1888ac15c6959a582a5f2b0df3f9af7070f00e1295719b6c1b1ea0
-MD5 60a6aed687830eee0f807697b936f55b ChangeLog 9671
-RMD160 3c97f7a1706ebbdea0bb9387e666b0e6120c184d ChangeLog 9671
-SHA256 9fadf3765e1888ac15c6959a582a5f2b0df3f9af7070f00e1295719b6c1b1ea0 ChangeLog 9671
+EBUILD xfce-utils-4.3.99.2.ebuild 996 RMD160 f11d8b8d68b66434b1479a5f4b0137cc3b4f01eb SHA1 6fdd60977fe87c25f35d9dd2fa428dad3c6a140b SHA256 786140cf5e470fa131aedfadf78bf8e80ead5a529f2ff34e525a5a39213ab20c
+MD5 f8dddac2325cd2ce1b326d2fe5f6a31e xfce-utils-4.3.99.2.ebuild 996
+RMD160 f11d8b8d68b66434b1479a5f4b0137cc3b4f01eb xfce-utils-4.3.99.2.ebuild 996
+SHA256 786140cf5e470fa131aedfadf78bf8e80ead5a529f2ff34e525a5a39213ab20c xfce-utils-4.3.99.2.ebuild 996
+MISC ChangeLog 9846 RMD160 21c68aa402a5f6bbef04ab591d57232ade836f6c SHA1 782d059ab7ed05e5f391cd8731b026aa47a35564 SHA256 da5de253df52c496b4c59320f49a827954cbe55e8eaf48c7f5b09cbf56e7e003
+MD5 eb84b1e31564034771ad693d8c35d6da ChangeLog 9846
+RMD160 21c68aa402a5f6bbef04ab591d57232ade836f6c ChangeLog 9846
+SHA256 da5de253df52c496b4c59320f49a827954cbe55e8eaf48c7f5b09cbf56e7e003 ChangeLog 9846
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 MD5 c390804e060ffd11a5bbb143434b2b2d metadata.xml 157
 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 metadata.xml 157
