@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-utils/xfce-utils-4.3.99.2.ebuild,v 1.2 2006/12/10 20:06:37 nichoj Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-utils/xfce-utils-4.3.99.2.ebuild,v 1.3 2007/01/06 17:56:43 nichoj Exp $
 
 inherit eutils xfce44
 
@@ -8,7 +8,7 @@ xfce44_beta
 
 DESCRIPTION="Xfce 4 utilities"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86"
-IUSE="doc"
+IUSE="doc debug"
 
 RDEPEND="|| ( x11-apps/xrdb
 	virtual/x11 )
