@@ -1,6 +1,11 @@
 # ChangeLog for xfce-base/xfce-utils
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-utils/ChangeLog,v 1.78 2006/12/17 14:18:42 welp Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-utils/ChangeLog,v 1.79 2007/01/06 17:56:43 nichoj Exp $
+
+  06 Jan 2007; Joshua Nichols <nichoj@gentoo.org>
+  xfce-utils-4.3.99.2.ebuild:
+  Added IUSE=debug, which was dropped when 'inherit debug' was removed from
+  xfce44.eclass
 
   17 Dec 2006; Peter Weller <welp@gentoo.org> files/Gentoo:
   s/pacakge/package in files/Gentoo
